Update index.html to have a propper padding

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
-<body>
-
+<body id="top" class="preview" data-spy="scroll" data-target=".subnav" data-offset="80">
+<div class="container">
 <header class="jumbotron subhead" id="overview">
   <div class="row">
     <div class="span6">
@@ -54,5 +54,5 @@
 </header>
 
 </body>
-
+</div>
 </html>
