--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Landpage for Kazza</title>
+    <link rel="stylesheet" href="bootswatch.css">
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
