Added more css references

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>Landpage for Kazza</title>
-    <link rel="stylesheet" href="bootswatch.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootswatch.css">
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
