--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
 
 <div class="span8">
     <h3>Why Showering Once a Day is Overrated</h3>
-    <p>They say cleanliness is next to godliness, but have you ever wondered if maybe we're taking the whole "showering every day" thing a tad too seriously? I mean, humans have been around for about 200,000 years and daily showers are a relatively new trend. I bet cavemen would scratch their heads at our watery ritual. "Why let water fall on you voluntarily?" Ugh, the primitive inventor of the first shower probably got chased out of the cave for suggesting such nonsense!</p>
-    <p>Look, if you're not breaking a sweat, embracing your inner gym enthusiast, or rolling in a mud pit, do you really need to bathe daily? I've come to believe that our ancestors might've been onto something. We should embrace the traddition, wear it with pride, and save water while we're at it! After all, the smell of nature was probably the original perfume. Chanel No. 5? Nah, I prefer Human one.</p>
+    <p>People long ago didn't shower daily. Why do we? Maybe cavemen were smarter about this. Not every day is a muddy adventure, right?</p>
+    <p>If you don't sweat or get dirty, maybe skipping a shower is okay. Save water and embrace the natural you. Plus, nature's scent isn't too bad!</p>
 </div>
+
 
 
     </div>
