--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="jumbotron subhead" id="overview">
   <div class="row">
     <div class="span6">
-      <h1><img src="img/test/7upspot.gif">&nbsp;<font color="#FF0000">L</font><font color="#FF5A00">a</font><font color="#FFB400">n</font><font color="#FFff00">d</font><font color="#A5ff00">p</font><font color="#4Bff00">a</font><font color="#00ff00">g</font><font color="#00ff5A">e</font><font color="#00ffB4">&nbsp;</font><font color="#00ffff">f</font><font color="#00B4ff">o</font><font color="#005Aff">r</font><font color="#0000ff">&nbsp;</font><font color="#4B00ff">K</font><font color="#A500ff">a</font><font color="#FF00ff">z</font><font color="#FF00B4">z</font><font color="#FF005A">a</font></h1>
+      <h1><img src="img/test/7upspot.gif">&nbsp;<font color="#FF0000">K</font><font color="#FF5A00">a</font><font color="#FFB400">z</font><font color="#FFff00">z</font><font color="#A5ff00">a</font><font color="#4Bff00">.</font><font color="#00ff00">j</font><font color="#00ff5A">p</font></h1>
       <p class="lead">Brought to you by Diegoo113!</p>
       <table cellpadding="2" cellspacing="2">
         <tbody><tr>
