--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
-<body id="top" class="preview" data-spy="scroll" data-target=".subnav" data-offset="80">
+<body id="top" data-spy="scroll" data-target=".subnav" data-offset="80">
 <div class="container">
 <header class="jumbotron subhead" id="overview">
   <div class="row">
