Corrected Siren Location

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <div class="alert alert-block">
     <a class="close">×</a>
-    <img class="pull-left" style="margin-top: -8px" src="img/test/drudgesiren.gif" width="80">
+    <img class="pull-left" style="margin-top: -8px" src="img/drudgesiren.gif" width="80">
     <h4 class="alert-heading">IP Detected!</h4>
    <p id="ipAlert">Hold up! We've detected your IP as <span style="color:red; font-weight:bold;" id="userIP">loading...</span>. Just kidding! Got your attention, didn't I?</p>
 
