--- a/index.html
+++ b/index.html
@@ -136,5 +136,10 @@
     </div>
     </div>
     <script src="js/snoweffect.js"></script>
+    <footer class="footer">
+				<p class="pull-left" style="margin-top: -14px"><img src="img/test/geocities.jpg"></p>
+			</footer>
+    <center><img src="img/test/counter2.gif"></center>
 </body>
+    
 </html>
