--- a/index.html
+++ b/index.html
@@ -131,15 +131,24 @@
         document.getElementById('userIP').textContent = "Error getting IP";
     });
 </script>
+	   
+<style>
+    .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+    }
+</style>
+ <footer class="footer">
+				<p class="pull-left" style="margin-top: -14px"><img src="img/test/geocities.jpg"></p>
+			</footer>
+    <center><img src="img/test/counter2.gif"></center>
 </div>
 
     </div>
     </div>
     <script src="js/snoweffect.js"></script>
-    <footer class="footer">
-				<p class="pull-left" style="margin-top: -14px"><img src="img/test/geocities.jpg"></p>
-			</footer>
-    <center><img src="img/test/counter2.gif"></center>
+   
 </body>
     
 </html>
