--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body id="top" data-spy="scroll" data-target=".subnav" data-offset="80">
-<div class="container">
+<div class="container" style="padding-top:30px;">
 <header class="jumbotron subhead" id="overview">
   <div class="row">
     <div class="span6">
