--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Landpage for Kazza</title>
+    <title>Kazza.jp</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootswatch.css">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -13,7 +13,7 @@
 <header class="jumbotron subhead" id="overview">
   <div class="row">
     <div class="span6">
-      <h1><img src="img/test/7upspot.gif">&nbsp;<font color="#FF0000">K</font><font color="#FF5A00">a</font><font color="#FFB400">z</font><font color="#FFff00">z</font><font color="#A5ff00">a</font><font color="#4Bff00">.</font><font color="#00ff00">j</font><font color="#00ff5A">p</font></h1>
+      <h1><font color="#FF0000">K</font><font color="#FF5A00">a</font><font color="#FFB400">z</font><font color="#FFff00">z</font><font color="#A5ff00">a</font><font color="#4Bff00">.</font><font color="#00ff00">j</font><font color="#00ff5A">p</font></h1>
       <p class="lead">Brought to you by Diegoo113!</p>
       <table cellpadding="2" cellspacing="2">
         <tbody><tr>
