Added hello kitty cursor

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 
 <head>
     <title>Kazza.jp</title>
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
-<body id="top" data-spy="scroll" data-target=".subnav" data-offset="80">
+<body id="top" data-spy="scroll" data-target=".subnav" data-offset="80" style="cursor: url('data:image/png;base64,iVBORw0KGgoA...[rest of your base64 data]...'), default;
+">
 <div class="container" style="padding-top:30px;">
 <header class="jumbotron subhead" id="overview">
   <div class="row">
@@ -132,6 +133,8 @@
     });
 </script>
     </div>
+
+	    <br><br><br>
  <footer class="footer">
 				<p class="pull-left" style="margin-top: -14px"><img src="img/test/geocities.jpg"></p>
 			</footer>
